--- a/bcs-card.html
+++ b/bcs-card.html
@@ -99,7 +99,7 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>BCS Card</strong></h1>
-          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.agilecrm.com/forms/5934035918979072" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <p><a class="uk-button uk-button-secondary" href="https://share.hsforms.com/1z_zTPUqjRz-SbIYZZJM8Rgby5do" target="_blank">Get started</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
 
         </div>
 
@@ -171,7 +171,7 @@
               <p>BCS Cards collect minimal view data and never collect IP addresses. The data collected is never sold.</p>
             </center>
             <p> <a class="uk-button uk-button-text" href="./card-example.html">View examples</a></p>
-        <p><a class="uk-button uk-button-text" href="https://airtable.com/shrkpDCl7O60tSOxz" target="_blank">Let's get started!</a></p>
+        <p><a class="uk-button uk-button-text" href="https://share.hsforms.com/1z_zTPUqjRz-SbIYZZJM8Rgby5do" target="_blank">Let's get started!</a></p>
 
         </div>
     </div>
