--- a/page12.html
+++ b/page12.html
@@ -99,9 +99,12 @@
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
           <img src="./img/bcs.png" width="40%" alt="">
           <h1><strong>BCS Marketing</strong></h1>
-          <p><a class="uk-button uk-button-secondary" href="https://borgcreative.agilecrm.com/forms/5144355338256384" target="_blank">Buy an ad</a><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
+          <p>
+            <a target="_blank" class="uk-button uk-button-secondary" href="https://share.hsforms.com/1KxD1zdGHTOacbwtCkX6S8Aby5do">Buy an ad</a>
+          </p>
           <p><a href="https://www.producthunt.com/posts/borg-creative-studios-marketing?utm_source=badge-review&utm_medium=badge&utm_souce=badge-borg-creative-studios-marketing#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=269183&theme=dark" alt="Borg Creative Studios Marketing - Privacy-Oriented, Low-Cost, Target Topics | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a></p>
 
+          
         </div>
 
     </div>
@@ -193,7 +196,14 @@
 
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
       <h1><strong>Let's host your ad today!</strong></h1>
-      <p><a class="uk-button uk-button-secondary" href="https://airtable.com/shr9X8mVZzORWDKSu" target="_blank">Sign up</a><a class="uk-button uk-button-secondary" href="./dashboard.html">Dashboard</a></p>
+
+              <p>
+
+                <a target="_blank" class="uk-button uk-button-secondary" href="https://share.hsforms.com/1KxD1zdGHTOacbwtCkX6S8Aby5do">Buy an ad</a>
+
+              </p>
+              <p><a class="uk-button uk-button-secondary" href="./dashboard.html">Dashboard</a></p>
+              <p><a class="uk-button uk-button-secondary" href="./accounts.html">Accounts</a></p>
     </div>
 
 </div>
