--- a/privacy.html
+++ b/privacy.html
@@ -60,7 +60,7 @@
 <div style="margin: 10px;">
 
   <h1><strong>Privacy Policy for Borg Creative Studios, LLC</strong></h1>
-  <h2>Effective Date: April 22, 2021</h2>
+  <h2>Effective Date: May 17, 2021</h2>
   <p class="uk-text-meta">For prior version click <a href="./privacyold.html">here</a>.</p>
   <p><div uk-lightbox>
     <a class="uk-button uk-button-default" href="./privacychange.html">View changes</a>
@@ -114,13 +114,13 @@ Advertising Partners Privacy Policies
   <a href="./privacychange.html"><span class="uk-label uk-label-success">UPDATED</span> Third Party Privacy Policies</a>
 </div></h2>
 <ul>
-  <li> <a href="https://panelbear.com/privacy/" target="_blank">Panel Bear</a></li>
+  <li> <a rel="noreferrer" href="https://panelbear.com/privacy/" target="_blank">Panel Bear</a></li>
   <p>Privacy friendly web analytics</p>
-  <li> <a href="https://www.agilecrm.com/privacy-policy" target="_blank">Agile CRM</a></li>
-  <p>CRM and form management (Any information shared in forms is stored with Agile CRM)</p>
-  <li> <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank">GitHub (GitHub Pages, git)</a></li>
+  <li> <a rel="noreferrer" href="https://legal.hubspot.com/product-privacy-policy" target="_blank">HubSpot</a></li>
+  <p>CRM and forms (Any information shared in forms is stored with HubSpot. Third-party integrations are NOT used. HubSpot employee access is deactivated.)</p>
+  <li> <a rel="noreferrer" href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank">GitHub (GitHub Pages, git)</a></li>
   <p>Web and project hosting (no personal information)</p>
-  <li> <a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Desk, Fresh Chat)</a></li>
+  <li> <a rel="noreferrer" href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Desk, Fresh Chat)</a></li>
   <p>Helpdesk, knowledge base, and web chat. Any information shared in helpdesk or chat communication is stored with FreshWorks.</p>
 
 
