updated BCS Lock about

--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -89,7 +89,9 @@
     <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>What is BCS Lock?</strong></h2>
+        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+          <img src="./img/secure.png" alt="">
+          <h2><strong>What is BCS Lock?</strong></h2>
 <p>BCS Lock is an offline, privacy-oriented password generater developed with Python3.</p>
 <!-- This is a button toggling the modal -->
 <p><button uk-toggle="target: #my-id" class="uk-button uk-button-secondary" type="button">Download</button></p>
@@ -117,18 +119,41 @@
 <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #3d566e;">
   <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
-    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h2><strong>Features</strong></h2>
-<img src="./img/hard-drive.svg" alt="">
+    <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+      <img src="./img/user.png" alt="">
+      <h2><strong>Designed for you.</strong></h2>
+      <p>BCS Lock is simple to use. All you have to do is open the application and it does the rest!</p>
+<!--<img src="./img/hard-drive.svg" alt="">
 <p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 and newer systems.</p>
 
 <img src="./img/privacy.svg" alt="">
-<p>BCS Lock does not contain trackers or logs.</p>
+<p>BCS Lock does not contain trackers or logs.</p>-->
 
 
 
 
 
     </div>
+</div>
+
+<div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
+  <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
+
+  <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+    <img src="./img/opensource.png" alt="">
+    <h2><strong>BCS Lock is open source</strong></h2>
+    <p>Want to know how the application works? Check out the <a target="_blank" href="https://github.com/Borg-Creative-Studios/BCS-Lock">source code</a>!</p>
+    <!--<img src="./img/hard-drive.svg" alt="">
+<p>BCS Lock is built to run smoothly and efficiantly on MacOS 10.12 and newer systems.</p>
+
+<img src="./img/privacy.svg" alt="">
+<p>BCS Lock does not contain trackers or logs.</p>-->
+
+
+
+
+
+  </div>
 </div>
 
 
