--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -90,7 +90,7 @@
       <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
         <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <img src="./img/secure.png" alt="">
+          <img src="./img/secure.png" alt="Secured account illustration | Sourced from undraw.co">
           <h2><strong>What is BCS Lock?</strong></h2>
 <p>BCS Lock is an offline, privacy-oriented password generater developed with Python3.</p>
 <!-- This is a button toggling the modal -->
@@ -120,7 +120,7 @@
   <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
     <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-      <img src="./img/user.png" alt="">
+      <img src="./img/user.png" alt="Person sitting at desk illustration | Sourced from undraw.co">
       <h2><strong>Designed for you.</strong></h2>
       <p>BCS Lock is simple to use. All you have to do is open the application and it does the rest!</p>
 <!--<img src="./img/hard-drive.svg" alt="">
@@ -140,7 +140,7 @@
   <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
 
   <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-    <img src="./img/opensource.png" alt="">
+    <img src="./img/opensource.png" alt="Open source illustration | Sourced from undraw.co">
     <h2><strong>BCS Lock is open source</strong></h2>
     <p>Want to know how the application works? Check out the <a target="_blank" href="https://github.com/Borg-Creative-Studios/BCS-Lock">source code</a>!</p>
     <!--<img src="./img/hard-drive.svg" alt="">
