--- a/card/index.html
+++ b/card/index.html
@@ -1,148 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
-  <link rel="shortcut icon" href="https://www.borgcreative.com/img/bcs.png">
-
-  <!-- Compressed CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-
-<!-- Compressed JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-
-<!-- UIkit CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/css/uikit.min.css" />
-
-<!-- UIkit JS -->
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit-icons.min.js"></script>
-
-
-  <meta charset="utf-8">
-  <title>BCS Card</title>
-</head>
-<header>
-  <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
-      <a href="https://www.borgcreative.com/"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
-
-      <button class="uk-button uk-button-secondary" type="button" >Menu</button>
-      <div uk-dropdown="mode: click">
-        <p><a href=""><button class="uk-button uk-button-text">Digital Products</button></a></p>
-        <div uk-dropdown="mode: click">
-          <p><a href="https://www.borgcreative.com/page12.html" ><button class="uk-button uk-button-text">BCS Marketing</button></a></p>
-          <p><a href="https://www.borgcreative.com/bcs-card.html" ><button class="uk-button uk-button-text">BCS Card</button></a></p>
-          <p><a href="https://www.borgcreative.com/fruity.html" ><button class="uk-button uk-button-text">Fruity</button></a></p>
-          <p><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank"><button class="uk-button uk-button-text">Grocery Catcher</button></a></p>
-          <p><a href="https://search.borgcreative.com/" target="_blank"><button class="uk-button uk-button-text">Search (Beta)</button></a></p>
-        </div>
-        <p><a href=""><button class="uk-button uk-button-text">Media</button></a></p>
-        <div uk-dropdown="mode: click">
-          <p><a href="https://www.borgcreative.com/animation.html" ><button class="uk-button uk-button-text">Animation</button></a></p>
-          <p><a href="https://www.borgcreative.com/video.html" ><button class="uk-button uk-button-text">Video</button></a></p>
-          <p><a href="https://www.borgcreative.com/interactive.html" ><button class="uk-button uk-button-text">Interactive</button></a></p>
-        </div>
-        <p><a href="https://www.borgcreative.com/welcome.html" ><button class="uk-button uk-button-text">Interactive Guide</button></a></p>
-
-        <p><a href="https://teespring.com/stores/borgcreative" target="_blank"><button class="uk-button uk-button-text">Shop</button></a></p>
-        <p><a href="https://www.borgcreative.com/privacy.html" ><button class="uk-button uk-button-text">Privacy</button></a></p>
-        <p><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"> <img src="./img/facebook.svg" width="40px" alt=""> </a><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"> <img src="./img/instagram.svg" width="40px" alt=""> </a><a href="https://twitter.com/borgcreative" target="_blank"> <img src="./img/twitter.svg" width="40px" alt=""> </a></p>
-
-
-      </div>
-
-  </div>
-
-
-</header>
-
-
-  <body style="margin-top: 0px;">
-    <script>
-  function initFreshChat() {
-    window.fcWidget.init({
-      token: "ecce6efc-4e78-428e-8df6-c1bdd0f3c1bd",
-      host: "https://wchat.freshchat.com"
-    });
-  }
-  function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
-</script>
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-color: #849ea3;">
-      <!--<p><a class="uk-button uk-button-secondary" href="./photography.html">View more</a></p>-->
-
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical"><h1><strong></strong></h1>
-          <center widith="95%">
-            <!--<img width="85%" src="./img/construction.png" alt="Construction illustration | Sourced from undraw.co">
-            <h1>This page is under construction!</h1>
-            <h5>A new, better dashboard is coming soon!</h5>-->
-
-            <img width="65%" src="./img/hologram.png" alt="data illustration | Sourced from undraw.co">
-
-            <h1> <strong>BCS Card</strong> </h1>
-            <h5> <strong>Connecting business owners with customers.</strong> </h5>
-
-
-          </center>
-
-
-
-        </div>
-    </div>
-
-
-
-<div style="margin: 10px;">
-
-<center>
-<table class="uk-table uk-table-responsive">
-<caption>Placement Breakdown</caption>
-<thead>
-<tr>
-    <th>Link</th>
-    <th># of Views</th>
-    <th># of Visitors</th>
-</tr>
-</thead>
-
-<tbody>
-<tr>
-    <td><a href="./tgkw.html">TGKW</a></td>
-    <td>143</td>
-    <td>88</td>
-
-</tr>
-
-</tbody>
-</table>
-</center>
-
-</div>
-
-
-  </body>
-  <footer>
-
-
-    <div name="header" class="uk-height-viewport uk-background-cover uk-light uk-flex" uk-parallax="bgy: +100; " style="background-image: url('https://www.borgcreative.com/img/bcs-cover.jpg');">
-
-        <div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <table class="uk-table" >
-      <tbody style="border: none;">
-          <tr style="background-color: #3d566e; border: none; color: #fff;">
-  <td><a href="https://www.borgcreative.com/privacy.html" >Privacy</a></td>
-  <td><a href="https://www.borgcreative.com/jobs.html" >Jobs</a></td>
-  <td><a href="https://www.borgcreative.com/about.html" >About Us</a></td>
-
-          </tr>
-          <tr style="background-color: #3d566e; border: none; color: #fff;">
-  <td><a href="https://data.borgcreative.com/" target="_blank" >Data</a></td>
-  <td><a href="https://www.borgcreative.com/accountterms.html" >Terms</a></td>
-  <td><a href="https://borgcreative.freshdesk.com/support/home"target="_blank">Support</a></td>
-          </tr>
-      </tbody>
-      <caption>Borg Creative Studios, LLC</caption>
-  </table>
-        </div>
-
-    </div>
-  </footer>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home - Brand</title><meta name="twitter:image" content="https://www.borgcreative.com/card/jacobborg/assets/img/jb-icon.jpg"><meta name="twitter:title" content="Jacob Borg"><meta name="twitter:card" content=""><meta name="description" content="BCS Card: Jacob Borg"><link rel="icon" type="image/png" sizes="1920x1920" href="assets/img/jb.png"><link rel="icon" type="image/png" sizes="1920x1920" href="assets/img/jb.png"><link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/jb-icon.jpg"><link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/jb-icon.jpg"><link rel="icon" type="image/png" sizes="1920x1920" href="assets/img/jb.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&amp;subset=latin-ext"><link rel="stylesheet" href="assets/css/styles.min.css"></head><body id="page-top" style="background: #3d566e;"><header class="d-flex masthead" style="background: url(&quot;assets/img/bcs-cover.jpg&quot;);"><div class="container my-auto text-center"><h1 class="mb-1" style="color: #fff;">BCS Card</h1><h3 class="mb-5" style="color: #fff;">A contactless contact sharing platform&nbsp;</h3><div class="overlay" style="border-style: none;"></div></div></header><div class="container" style="font-family: 'Source Sans Pro', sans-serif;"><section class="highlight-clean" style="margin: 30px;"><div class="container"><div class="intro"><h2 class="text-center">What's included?</h2><img src="assets/img/bcs-card-promo3.png" style="width: 100%;text-align: center;margin: 0%;"><p class="text-center">BCS Card includes two QR code files for sharing your contact information.</p></div><img src="assets/img/bcs-card-promo1.png" style="width: 75%;margin: 15%;"><p class="text-center">BCS Card includes a static webpage for all of your links.</p><div class="buttons"><a class="btn btn-light" role="button" href="https://www.borgcreative.com/bcs-card.html">Get started</a></div></div></section></div><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
