--- a/new/site/welcome.html
+++ b/new/site/welcome.html
@@ -81,7 +81,7 @@ src="https://app.papercups.io/widget.js"
             }
             function qsub1() {
                 var x = document.getElementById("q1");
-                document.getElementById("q1").innerHTML = '<a href="animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a><a href="./video.html"><button class="uk-button uk-button-secondary">Video</button></a><a href="https://borgcreative.agilecrm.com/forms/5350484106346496" target="_blank"><button class="uk-button uk-button-secondary">Request consultation</button></a>';
+                document.getElementById("q1").innerHTML = '<a href="animation.html"><button class="uk-button uk-button-secondary">Animation</button></a><a href="interactive.html"><button class="uk-button uk-button-secondary">Interactive</button></a><a href="video.html"><button class="uk-button uk-button-secondary">Video</button></a><a href="https://borgcreative.agilecrm.com/forms/5350484106346496" target="_blank"><button class="uk-button uk-button-secondary">Request consultation</button></a>';
                 var x = document.getElementById("t1");
                 document.getElementById("t1").innerHTML = "Select a category or request a consultation.";
                 var x = document.getElementById("reset");
