--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -22,7 +22,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
             <p>Buy an ad today for just $10!</p>
-            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://borgcreative.agilecrm.com/forms/6456099956391936" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://www.borgcreative.com/adreport.html" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -35,7 +35,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Author</span></h5>
             <p>A new, browser-based writing app.</p>
-            <a href="https://mlink.borgcreative.com/author.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://borgcreative.agilecrm.com/forms/6456099956391936" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://mlink.borgcreative.com/author.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://www.borgcreative.com/adreport.html" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
