--- a/bct/mk2-bar-3.html
+++ b/bct/mk2-bar-3.html
@@ -23,7 +23,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
             <p>Buy an ad today for just $10!</p>
-            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://borgcreative.agilecrm.com/forms/6456099956391936" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://www.borgcreative.com/adreport.html" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -36,7 +36,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
             <p>We are merging ministry & technology.</p>
-            <a href="https://www.wavedm.net/" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://borgcreative.agilecrm.com/forms/6456099956391936" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://www.wavedm.net/" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://www.borgcreative.com/adreport.html" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
