--- a/accountterms.html
+++ b/accountterms.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html><html style="background: #3d566e;" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Privacy</title><meta name="theme-color" content="#fff"><meta property="og:image" content="https://www.borgcreative.com/assets/img/bcs.png"><meta property="og:type" content="website"><meta name="twitter:description" content="A new web browser for MacOS."><meta name="twitter:image" content="https://www.borgcreative.com/assets/img/fruity-banner.png"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Fruity"><meta name="description" content="Our privacy policy and practices."><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"><script>
+<!DOCTYPE html><html style="background: #3d566e;" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Privacy</title><meta name="theme-color" content="#fff"><meta property="og:type" content="website"><meta property="og:image" content="https://www.borgcreative.com/assets/img/bcs.png"><meta name="twitter:description" content="A new web browser for MacOS."><meta name="twitter:image" content="https://www.borgcreative.com/assets/img/fruity-banner.png"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Fruity"><meta name="description" content="Our privacy policy and practices."><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"><script>
 window.Papercups = {
   config: {
     accountId: "d0e7d0dc-e134-4e74-a5ad-29c6c82aae0f",
     title: "Welcome to Borg Creative Studios",
     subtitle: "Ask us anything in the chat window below 😊",
     primaryColor: "#849ea3",
-    greeting: "",
-    awayMessage: "",
+    greeting: "Hello! How can we assist you?",
+    awayMessage: "We're away at the moment, but you can go ahead and send us a message.",
     newMessagePlaceholder: "Start typing...",
     showAgentAvailability: true,
     agentAvailableText: "We're online right now!",
     agentUnavailableText: "We're away at the moment, but you can go ahead and send us a message.",
-    requireEmailUpfront: false,
+    requireEmailUpfront: true,
     iconVariant: "filled",
     baseUrl: "https://app.papercups.io",
     // Optionally include data about your customer here to identify them
