--- a/welcome.html
+++ b/welcome.html
@@ -32,6 +32,14 @@ async
 defer
 src="https://app.papercups.io/widget.js"
 ></script>
+
+
+<!-- Panelbear Analytics - We respect your privacy -->
+<script async src="https://cdn.panelbear.com/analytics.js?site=AZWIByPgAkY"></script>
+<script>
+    window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+    panelbear('config', { site: 'AZWIByPgAkY' });
+</script>
 </head><body><nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"><div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/bcs.png" style="width: 45px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li><li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li></ul></div></div></nav><main class="page landing-page"><section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);"><div class="text"><h1 style="color: #fff;">Welcome</h1></div></section><section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;"><div class="container"><div class="block-heading" style="padding: 20px 0px 0px;"><div>
         <!-- Compressed CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
