updated the logo and menu

--- a/bcs-card.html
+++ b/bcs-card.html
@@ -1,4 +1,27 @@
-<!DOCTYPE html><html style="background: #3d566e;" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>BCS Card</title><meta name="theme-color" content="#fff"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Borg Creative Studios"><meta property="og:type" content="website"><meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources."><meta name="twitter:image" content="assets/img/bcs-card.jpg"><meta name="description" content="Shareable, digital business cards"><meta property="og:image" content="assets/img/bcs-card.jpg"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"><script>
+<!DOCTYPE html>
+<html style="background: #3d566e;" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>BCS Card</title>
+    <meta name="theme-color" content="#fff">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Borg Creative Studios">
+    <meta property="og:type" content="website">
+    <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
+    <meta name="twitter:image" content="assets/img/bcs-card.jpg">
+    <meta name="description" content="Shareable, digital business cards">
+    <meta property="og:image" content="assets/img/bcs-card.jpg">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+<script>
 window.Papercups = {
   config: {
     accountId: "d0e7d0dc-e134-4e74-a5ad-29c6c82aae0f",
@@ -40,9 +63,97 @@ src="https://app.papercups.io/widget.js"
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
 </script>
-</head><body><nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"><div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/bcs.png" style="width: 45px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li><li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li></ul></div></div></nav><main class="page landing-page"><section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);"><div class="text"><h1>BCS Card</h1></div></section><section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;"><div class="container"><div class="block-heading"><h2 class="text-info" style="color: #3d566e;"></h2><h1 style="color: #3d566e;"></h1><p></p></div><!-- Start: Highlight Phone --><section class="highlight-phone" style="background: #f6f6f6;"><div class="container"><div class="row"><div class="col-md-8"><!-- Start: Intro --><div class="intro"><h2>What is BCS Card?</h2><p>BCS Cards can be shared via QR code, link, and more.</p></div><!-- End: Intro --></div><div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/share.png" style="width: 100%;"></div></div></div></section><!-- End: Highlight Phone --></div><!-- Start: 1 Row 3 Columns --><div class="container"><div class="row"><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/connect.png" style="width: 100%;"><h3>Who can share my card?</h3><p>Anyone with the QR code or link can share your card.</p></div><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/contactcard.png" style="width: 100%;"><h3>Do I have a profile page?</h3><p>Yes! Your profile page is where your contact card is stored and where your links reside.</p></div><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;"><h3>What about privacy?</h3><p>We collect very little data, and this data never includes IP addresses.</p></div></div></div><!-- End: 1 Row 3 Columns --><!-- Start: Contact Form Clean --><section class="contact-clean" style="background: #fff;"><!-- Start: BCS Form --><div class="container" style="width: 75%;background: #fff;border-radius: 3px;border: 1px groove rgb(222,222,222);"><div>
+</head>
+
+<body>
+    <main class="page landing-page">
+        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
+            <div class="text">
+                <h1>BCS Card</h1>
+            </div>
+        </section>
+        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: #3d566e;"></h2>
+                    <h1 style="color: #3d566e;"></h1>
+                    <p></p>
+                </div><!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>What is BCS Card?</h2>
+                                    <p>BCS Cards can be shared via QR code, link, and more.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/share.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
+                </section><!-- End: Highlight Phone -->
+            </div><!-- Start: 1 Row 3 Columns -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/connect.png" style="width: 100%;">
+                        <h3>Who can share my card?</h3>
+                        <p>Anyone with the QR code or link can share your card.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/contactcard.png" style="width: 100%;">
+                        <h3>Do I have a profile page?</h3>
+                        <p>Yes! Your profile page is where your contact card is stored and where your links reside.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
+                        <h3>What about privacy?</h3>
+                        <p>We collect very little data, and this data never includes IP addresses.</p>
+                    </div>
+                </div>
+            </div><!-- End: 1 Row 3 Columns -->
+            <!-- Start: Contact Form Clean -->
+            <section class="contact-clean" style="background: #fff;">
+                <!-- Start: BCS Form -->
+                <div class="container" style="width: 75%;background: #fff;border-radius: 3px;border: 1px groove rgb(222,222,222);"><div>
 
 <iframe src="https://tally.so/embed/mBp0Nw?hideTitle=1&transparentBackground=1" width="100%" height="500"
     frameborder="0" marginheight="0" marginwidth="0" title="BCS Card Setup"></iframe>
 
-</div></div><!-- End: BCS Form --></section><!-- End: Contact Form Clean --></section><section class="clean-block about-us" style="padding: 0px 0px 0px;"><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons --><!-- Start: Links --><ul class="list-inline"><li class="list-inline-item"><a href="index.html">Home</a></li><li class="list-inline-item"><a href="services.html">Services</a></li><li class="list-inline-item"><a href="about.html">About</a></li><li class="list-inline-item"><a href="accountterms.html">Terms</a></li><li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li></ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --></section></main><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+</div></div><!-- End: BCS Form -->
+            </section><!-- End: Contact Form Clean -->
+        </section>
+        <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+            <!-- Start: Footer Basic -->
+            <footer class="footer-basic">
+                <!-- Start: Social Icons -->
+                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <!-- Start: Links -->
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="services.html">Services</a></li>
+                    <li class="list-inline-item"><a href="about.html">About</a></li>
+                    <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
+                    <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
+                </ul><!-- End: Links -->
+                <!-- Start: Copyright -->
+                <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
+            </footer><!-- End: Footer Basic -->
+        </section>
+    </main>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;">
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
+</body>
+
+</html>
