--- a/coconut.html
+++ b/coconut.html
@@ -1,4 +1,27 @@
-<!DOCTYPE html><html style="background: #3d566e;" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Coconut</title><meta name="theme-color" content="#fff"><meta property="og:image" content="assets/img/code.jpg"><meta property="og:type" content="website"><meta name="twitter:description" content="A new web browser for MacOS."><meta name="twitter:image" content="assets/img/fruity-banner.png"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Fruity"><meta name="description" content="A browser extension for making the internet a paradise"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"><script>
+<!DOCTYPE html>
+<html style="background: #3d566e;" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Coconut</title>
+    <meta name="theme-color" content="#fff">
+    <meta property="og:image" content="assets/img/code.jpg">
+    <meta property="og:type" content="website">
+    <meta name="twitter:description" content="A new web browser for MacOS.">
+    <meta name="twitter:image" content="assets/img/fruity-banner.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Fruity">
+    <meta name="description" content="A browser extension for making the internet a paradise">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+<script>
 window.Papercups = {
   config: {
     accountId: "d0e7d0dc-e134-4e74-a5ad-29c6c82aae0f",
@@ -40,4 +63,88 @@ src="https://app.papercups.io/widget.js"
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
 </script>
-</head><body><nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"><div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/bcs.png" style="width: 45px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li><li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li></ul></div></div></nav><main class="page landing-page"><section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/coconutcover2.png&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);"><div class="text"><h1>Coconut</h1></div></section><section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;"><div class="container"><div class="block-heading"><h2 class="text-info" style="color: #3d566e;"></h2><h1 style="color: #3d566e;"></h1><p></p></div><!-- Start: Highlight Phone --><section class="highlight-phone" style="background: #f6f6f6;"><div class="container"><div class="row"><div class="col-md-8"><!-- Start: Intro --><div class="intro"><h2>What is Coconut?</h2><p>Coconut is a Safari browser extension for blocking cookies and unwanted content on harmful websites.</p></div><!-- End: Intro --></div><div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/icon_512x512.png" style="width: 100%;"></div></div></div></section><!-- End: Highlight Phone --></div><!-- Start: 1 Row 3 Columns --><div class="container"><div class="row"><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_startup_life_2du2.svg" style="width: 100%;"><h3>Designed for MacOS.</h3><p>Built for Apple's Safari browser.</p></div><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_Maintenance_re_59vn.svg" style="width: 100%;"><h3>An independent database.</h3><p>We have produced our own blocking list.</p></div><div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_privacy_protection_nlwy.svg" style="width: 100%;"><h3>Built for privacy.</h3><p>Coconut will block cookies on websites that are known not to respect your privacy.</p></div></div></div><!-- End: 1 Row 3 Columns --><p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p></section><section class="clean-block about-us" style="padding: 0px 0px 0px;"><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons --><!-- Start: Links --><ul class="list-inline"><li class="list-inline-item"><a href="index.html">Home</a></li><li class="list-inline-item"><a href="services.html">Services</a></li><li class="list-inline-item"><a href="about.html">About</a></li><li class="list-inline-item"><a href="accountterms.html">Terms</a></li><li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li></ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --></section></main><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+</head>
+
+<body>
+    <main class="page landing-page">
+        <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/coconutcover2.png&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);">
+            <div class="text">
+                <h1>Coconut</h1>
+            </div>
+        </section>
+        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: #3d566e;"></h2>
+                    <h1 style="color: #3d566e;"></h1>
+                    <p></p>
+                </div><!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>What is Coconut?</h2>
+                                    <p>Coconut is a Safari browser extension for blocking cookies and unwanted content on harmful websites.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/icon_512x512.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
+                </section><!-- End: Highlight Phone -->
+            </div><!-- Start: 1 Row 3 Columns -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_startup_life_2du2.svg" style="width: 100%;">
+                        <h3>Designed for MacOS.</h3>
+                        <p>Built for Apple's Safari browser.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_Maintenance_re_59vn.svg" style="width: 100%;">
+                        <h3>An independent database.</h3>
+                        <p>We have produced our own blocking list.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_privacy_protection_nlwy.svg" style="width: 100%;">
+                        <h3>Built for privacy.</h3>
+                        <p>Coconut will block cookies on websites that are known not to respect your privacy.</p>
+                    </div>
+                </div>
+            </div><!-- End: 1 Row 3 Columns -->
+            <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
+        </section>
+        <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+            <!-- Start: Footer Basic -->
+            <footer class="footer-basic">
+                <!-- Start: Social Icons -->
+                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <!-- Start: Links -->
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="services.html">Services</a></li>
+                    <li class="list-inline-item"><a href="about.html">About</a></li>
+                    <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
+                    <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
+                </ul><!-- End: Links -->
+                <!-- Start: Copyright -->
+                <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
+            </footer><!-- End: Footer Basic -->
+        </section>
+    </main>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;">
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
+</body>
+
+</html>
