--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
-<!DOCTYPE html><html style="background: #3d566e;" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Home</title><meta name="theme-color" content="#fff"><meta property="og:image" content="assets/img/code.jpg"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Borg Creative Studios"><meta property="og:type" content="website"><meta name="description" content="Our team develops software, produces video games, and creates digital media resources."><meta name="twitter:image" content="assets/img/bcs.png"><meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources."><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs-logo.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css"><script>
+<!DOCTYPE html>
+<html style="background: #3d566e;" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home</title>
+    <meta name="theme-color" content="#fff">
+    <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
+    <meta property="og:image" content="assets/img/code.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Borg Creative Studios">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Our team develops software, produces video games, and creates digital media resources.">
+    <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+<script>
 window.Papercups = {
   config: {
     accountId: "d0e7d0dc-e134-4e74-a5ad-29c6c82aae0f",
@@ -40,4 +63,76 @@ src="https://app.papercups.io/widget.js"
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
 </script>
-</head><body><nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar"><div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/bcs-logo.png" style="width: 45px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1"><ul class="navbar-nav ms-auto"><li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link" href="services.html">Services</a></li><li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li><li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li></ul></div></div></nav><main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);"><section><!-- Start: web design --><div style="padding-top: 30px;"><div class="text-center"><h2 class="text-white">Web Design&nbsp;</h2><p class="text-white">Cost-efficient websites for anyone or any business.</p><p class="text-white" style="margin-bottom: 0px;"><a href="webdesign.html">learn more</a></p><img src="assets/img/webdesign2.png" style="min-width: 250px;max-width: 70%;"></div></div><!-- End: web design --><!-- Start: Fruity --><div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;"><div class="text-center"><h2>Fruity Web Browser</h2><p>Minimalist web browsing for MacOS.</p><p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/lemon.png" style="min-width: 250px;max-width: 70%;"></div></div><!-- End: Fruity --><!-- Start: Marketing --><div style="padding-top: 30px;"><div class="text-center"><h2 style="color: rgb(255,255,255);">BCS Marketing</h2><p style="color: rgb(255,255,255);">Privacy by-design flat-rate marketing for anyone.</p><p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;"></div></div><!-- End: Marketing --><!-- Start: more --><div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;"><div class="text-center"><h2>And so much more!</h2><p class="text-white" style="margin-bottom: 0px;"><a href="services.html">our products and services</a></p><img src="assets/img/more.png" style="min-width: 250px;max-width: 70%;"></div></div><!-- End: more --></section><section class="clean-block about-us" style="padding: 0px 0px 0px;"><!-- Start: Footer Basic --><footer class="footer-basic"><!-- Start: Social Icons --><div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons --><!-- Start: Links --><ul class="list-inline"><li class="list-inline-item"><a href="index.html">Home</a></li><li class="list-inline-item"><a href="services.html">Services</a></li><li class="list-inline-item"><a href="about.html">About</a></li><li class="list-inline-item"><a href="accountterms.html">Terms</a></li><li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li></ul><!-- End: Links --><!-- Start: Copyright --><p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright --></footer><!-- End: Footer Basic --></section></main><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+</head>
+
+<body>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;">
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
+        <section>
+            <!-- Start: web design -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 class="text-white">Web Design&nbsp;</h2>
+                    <p class="text-white">Cost-efficient websites for anyone or any business.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="webdesign.html">learn more</a></p><img src="assets/img/webdesign2.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: web design -->
+            <!-- Start: Fruity -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>Fruity Web Browser</h2>
+                    <p>Minimalist web browsing for MacOS.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" src="assets/img/lemon.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Fruity -->
+            <!-- Start: Marketing -->
+            <div style="padding-top: 30px;">
+                <div class="text-center">
+                    <h2 style="color: rgb(255,255,255);">BCS Marketing</h2>
+                    <p style="color: rgb(255,255,255);">Privacy by-design flat-rate marketing for anyone.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Marketing -->
+            <!-- Start: more -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>And so much more!</h2>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="services.html">our products and services</a></p><img src="assets/img/more.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: more -->
+        </section>
+        <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+            <!-- Start: Footer Basic -->
+            <footer class="footer-basic">
+                <!-- Start: Social Icons -->
+                <div class="social"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
+                <!-- Start: Links -->
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="index.html">Home</a></li>
+                    <li class="list-inline-item"><a href="services.html">Services</a></li>
+                    <li class="list-inline-item"><a href="about.html">About</a></li>
+                    <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
+                    <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
+                </ul><!-- End: Links -->
+                <!-- Start: Copyright -->
+                <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
+            </footer><!-- End: Footer Basic -->
+        </section>
+    </main>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
+</body>
+
+</html>
