updated open graph

--- a/accounts.html
+++ b/accounts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Accounts</title>
     <meta name="theme-color" content="#fff">
-    <meta property="og:image" content="assets/img/code.jpg">
+    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Fruity">
     <meta name="twitter:card" content="summary">
