--- a/services.html
+++ b/services.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Services &amp; Products</title>
     <meta name="theme-color" content="#fff">
+    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
-    <meta property="og:image" content="assets/img/code.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
