--- a/interactive.html
+++ b/interactive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Interactive</title>
     <meta name="theme-color" content="#fff">
-    <meta property="og:image" content="assets/img/code.jpg">
+    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="A new web browser for MacOS.">
     <meta name="twitter:image" content="assets/img/fruity-banner.png">
