Interactive page updated
I have updated the interactive page to match the website theming better and include newer projects

--- a/interactive.html
+++ b/interactive.html
@@ -86,17 +86,73 @@ src="https://app.papercups.io/widget.js"
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
             <div class="container">
-                <!-- Start: Highlight Phone -->
-                <section class="highlight-phone" style="background: #f6f6f6;padding: 0px 0px 55px;">
-                    <h2></h2>
-                    <h2>AR Effects</h2>
-                    <p>We make AR effects for brand recognition, customer engagement, and more!<br></p><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;" href="lenses.html">Learn more</a>
-                    <h2>Quizzes</h2>
-                    <p>We have developed an internet quiz system that is great for customer service, entertainment, and education.<br></p><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;border-radius: 10px 0px 0px 10px;" href="welcome.html" target="_blank">View example</a><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;border-radius: 0px 10px 10px 0px;" href="consultation.html">Request Consultation</a>
-                    <h2><strong>Grocery Catcher</strong></h2>
-                    <p>Catch the food with your cart and avoid the rapidly approaching boulders! Every time your cart collides with a boulder it's damaged, so be careful! Your cart can only take three hits!</p><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;" href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">Buy Now</a>
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: #3d566e;"></h2>
+                    <h1 style="color: #3d566e;"></h1>
+                    <p></p>
+                </div><!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>Our team's interactive content has been viewed over 500k times.</h2>
+                                    <p>Interactive content is a great tool for entertainment and customer interaction.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/people.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
                 </section><!-- End: Highlight Phone -->
-            </div>
+            </div><!-- Start: 1 Row 3 Columns -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/webdesign.png" style="width: 100%;">
+                        <h3>Web Content</h3>
+                        <p>We have developed an internet quiz system that is great for customer service, entertainment, and education.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/phone.png" style="width: 100%;padding-bottom: 20px;">
+                        <h3>AR Effects</h3>
+                        <p>AR effects are easy to share with your customers. They can be shared via QR code or link.</p>
+                    </div>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/gaming.png" style="width: 100%;">
+                        <h3>Games</h3>
+                        <p>We develop games using C#, HTML 5, JavaScript, and more!</p>
+                    </div>
+                    <div class="col">
+                        <p>*We only produce effects for Snapchat, Facebook, and Instagram.</p>
+                    </div>
+                </div>
+            </div><!-- End: 1 Row 3 Columns -->
+            <!-- Start: Projects Clean -->
+            <section class="projects-clean">
+                <div class="container">
+                    <!-- Start: Intro -->
+                    <div class="intro">
+                        <h2 class="text-center">Our current interactive projects</h2>
+                    </div><!-- End: Intro -->
+                    <!-- Start: Projects -->
+                    <div class="row projects">
+                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/header.jpg" style="width: 80%;">
+                            <h3 class="name">WDM Courses</h3>
+                            <p class="description">WDM Courses features some of our privacy-friendly quiz content. This version lacks any tracking or analytics.</p><a href="https://courses.wavedm.net/individuals.html" target="_blank">Check it out</a>
+                        </div>
+                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/groceries2.jpg" style="width: 80%;">
+                            <h3 class="name">Grocery Catcher</h3>
+                            <p class="description">A game for anyone and anytime. Just open it and start playing.</p><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank">Check it out</a>
+                        </div>
+                    </div><!-- End: Projects -->
+                    <div class="row text-center">
+                        <div class="col"><img class="img-fluid" src="assets/img/lenses/512.png" style="width: 80%;" width="90%">
+                            <h3 class="name">MySpeech</h3><a href="https://myspeech.borgcreative.com">Learn More</a>
+                        </div>
+                        <div class="col"><img class="img-fluid" src="assets/img/lenses/snapcode.png" style="width: 80%;" width="90%">
+                            <h3 class="name">Social Media AR Effects</h3><a href="lenses.html">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </section><!-- End: Projects Clean -->
         </section>
         <section class="clean-block about-us" style="padding: 0px 0px 0px;">
             <!-- Start: Footer Basic -->
